src/prompts/snapshots/promptuity__prompts__password__tests__custom_mask.snap
---
source: src/prompts/password.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Active
input(cursor): ∙| 
body(none):
---
state: Active
input(cursor): ∙∙| 
body(none):
---
state: Active
input(cursor): ∙∙∙| 
body(none):
---
state: Submit
input(cursor): ∙∙∙| 
body(none):
