src/prompts/snapshots/promptuity__prompts__password__tests__hint.snap
---
source: src/prompts/password.rs
---
state: Active
message: test message
hint: hint message
placeholder: none
input(cursor): | 
body(none):
