src/prompts/snapshots/promptuity__prompts__password__tests__required_error.snap
---
source: src/prompts/password.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Error(This field is required.)
input(cursor): | 
body(none):
